--- a/Learn.ipynb
+++ b/Learn.ipynb
@@ -14,8 +14,13 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1600701121639",
-   "display_name": "Python 3.8.5 64-bit"
+   "name": "Python 3.8.5 64-bit",
+   "display_name": "Python 3.8.5 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "aa5a7a82a422cd82de48e383c2ba6d582cfbdbd8ed54b9d56a08e08bda219e83"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -23,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +38,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n      <th>D</th>\n      <th>E</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>foo</td>\n      <td>one</td>\n      <td>small</td>\n      <td>1</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>foo</td>\n      <td>one</td>\n      <td>large</td>\n      <td>2</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>foo</td>\n      <td>one</td>\n      <td>large</td>\n      <td>2</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>foo</td>\n      <td>two</td>\n      <td>small</td>\n      <td>3</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>foo</td>\n      <td>two</td>\n      <td>small</td>\n      <td>3</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>bar</td>\n      <td>one</td>\n      <td>large</td>\n      <td>4</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>bar</td>\n      <td>one</td>\n      <td>small</td>\n      <td>5</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>bar</td>\n      <td>two</td>\n      <td>small</td>\n      <td>6</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>bar</td>\n      <td>two</td>\n      <td>large</td>\n      <td>7</td>\n      <td>9</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 334
+     "execution_count": 2
     }
    ],
    "source": [
@@ -978,6 +983,73 @@
    "source": [
     "df.fillna(0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "          A         B         C         D\n0  1.463601 -0.716782  0.653131 -0.907543\n1  0.605668 -0.681341 -0.121819  0.005179\n2  1.593141  0.902298 -1.674956  1.042337\n3 -1.025583 -0.741327  0.478916  1.221962\n4 -0.036569  2.177153  0.312526  1.069892",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n      <th>D</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.463601</td>\n      <td>-0.716782</td>\n      <td>0.653131</td>\n      <td>-0.907543</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.605668</td>\n      <td>-0.681341</td>\n      <td>-0.121819</td>\n      <td>0.005179</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1.593141</td>\n      <td>0.902298</td>\n      <td>-1.674956</td>\n      <td>1.042337</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-1.025583</td>\n      <td>-0.741327</td>\n      <td>0.478916</td>\n      <td>1.221962</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>-0.036569</td>\n      <td>2.177153</td>\n      <td>0.312526</td>\n      <td>1.069892</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(np.random.randn(5, 4), columns=list('ABCD'))\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "          A         C\n0  1.463601  0.653131\n1  0.605668 -0.121819\n2  1.593141 -1.674956\n3 -1.025583  0.478916\n4 -0.036569  0.312526",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>C</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.463601</td>\n      <td>0.653131</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.605668</td>\n      <td>-0.121819</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1.593141</td>\n      <td>-1.674956</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-1.025583</td>\n      <td>0.478916</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>-0.036569</td>\n      <td>0.312526</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "df_new = df[df.columns.difference(['B', 'D'])]\n",
+    "df_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "          A         B\n0  1.463601 -0.716782\n1  0.605668 -0.681341\n2  1.593141  0.902298\n3 -1.025583 -0.741327\n4 -0.036569  2.177153",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.463601</td>\n      <td>-0.716782</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.605668</td>\n      <td>-0.681341</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1.593141</td>\n      <td>0.902298</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-1.025583</td>\n      <td>-0.741327</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>-0.036569</td>\n      <td>2.177153</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "df_new1 = df[df.columns.difference(['C', 'D'])]\n",
+    "df_new1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
